<resources>
    <string name="app_name">Barang Hilang</string>

    <!-- Text -->
    <string name="txt_jdldepan1a">Masuk</string>
    <string name="txt_jdldepan1b">Lo&amp;fo Amikom</string>

    <!-- Button -->
    <string name="txt_loginbutton">Login</string>
    <string name="txt_sendbutton">Send</string>
    <string name="txt_editbutton">Edit</string>
    <string name="txt_hapusbutton">Hapus</string>
    <string name="txt_batalbutton">Batal</string>

    <!-- Textbox -->
    <string name="txt_boxusername">Username</string>
    <string name="txt_boxpassword">Password</string>
    <string name="txt_warninglogin1">Username or Password not correct!</string>
    <string name="info_kasusselesai">Tombol Kasus Selesai digunakan ketika barang anda telah ditemukan atau orang yang mempunyai barang tersebut ditemukan.</string>
</resources>
