<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBlackTrans">

    <androidx.cardview.widget.CardView
        android:background="@color/colorWhite"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/judulpost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Menu : Judul Post"
            android:textAlignment="center"
            android:textSize="@dimen/heading2"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/rapiatas1"
            android:layout_marginBottom="@dimen/rapiatas1"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/editpost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_editbutton"
            >
        </Button>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/hapuspost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_hapusbutton"
            >
        </Button>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            />
        <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/batalbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_batalbutton"
         >
        </Button>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>